// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Chart should render empty state when no data 1`] = `
<DefaultEmptyState
  header="No data available"
  icon={
    <Icon
      iconSize="lg"
    >
      <InfoCircleIcon />
    </Icon>
  }
  secondaryActions={Array []}
  variant="xs"
/>
`;

exports[`Line Chart should render line chart 1`] = `
<Chart
  ariaDesc="Line chart"
  containerComponent={
    <ChartVoronoiContainer
      constrainToVisibleArea={true}
      labels={[Function]}
    />
  }
  events={
    Array [
      Object {
        "eventHandlers": Object {
          "onClick": [Function],
        },
        "target": "data",
      },
    ]
  }
  height={350}
  legendComponent={<ChartLegend />}
  legendData={
    Array [
      Object {
        "name": "red",
        "symbol": Object {
          "fill": "#AA4643",
        },
      },
      Object {
        "name": "green",
        "symbol": Object {
          "fill": "#89A54E",
        },
      },
    ]
  }
  legendOrientation="horizontal"
  legendPosition="bottom"
  name="abc"
  padding={
    Object {
      "bottom": 60,
      "left": 60,
      "right": 20,
      "top": 20,
    }
  }
  themeColor="multi"
  width={1000}
>
  <ChartAxis />
  <ChartAxis
    dependentAxis={true}
    showGrid={true}
  />
  <ChartGroup>
    <ChartLine
      data={
        Array [
          Object {
            "name": "red",
            "x": 1,
            "y": 5,
          },
          Object {
            "name": "red",
            "x": 2,
            "y": 7,
          },
          Object {
            "name": "red",
            "x": 3,
            "y": 9,
          },
        ]
      }
      key="red"
      name="red"
      style={
        Object {
          "data": Object {
            "stroke": "#AA4643",
          },
        }
      }
    />
    <ChartLine
      data={
        Array [
          Object {
            "name": "green",
            "x": 1,
            "y": 2,
          },
          Object {
            "name": "green",
            "x": 2,
            "y": 4,
          },
          Object {
            "name": "green",
            "x": 3,
            "y": 6,
          },
        ]
      }
      key="green"
      name="green"
      style={
        Object {
          "data": Object {
            "stroke": "#89A54E",
          },
        }
      }
    />
  </ChartGroup>
</Chart>
`;

exports[`Line Chart should render line chart with timeseries 1`] = `
<Chart
  ariaDesc="Line chart"
  containerComponent={
    <ChartVoronoiContainer
      constrainToVisibleArea={true}
      labels={[Function]}
    />
  }
  events={
    Array [
      Object {
        "eventHandlers": Object {
          "onClick": [Function],
        },
        "target": "data",
      },
    ]
  }
  height={350}
  legendComponent={<ChartLegend />}
  legendData={
    Array [
      Object {
        "name": "red",
        "symbol": Object {
          "fill": "#AA4643",
        },
      },
      Object {
        "name": "green",
        "symbol": Object {
          "fill": "#89A54E",
        },
      },
    ]
  }
  legendOrientation="horizontal"
  legendPosition="bottom"
  name="xyz"
  padding={
    Object {
      "bottom": 70,
      "left": 30,
      "right": 20,
      "top": 10,
    }
  }
  themeColor="multi"
  width={1000}
>
  <ChartAxis
    style={
      Object {
        "tickLabels": Object {
          "angle": -40,
          "textAnchor": "end",
          "verticalAnchor": "end",
        },
      }
    }
    tickFormat={[Function]}
  />
  <ChartAxis
    dependentAxis={true}
    showGrid={true}
  />
  <ChartGroup>
    <ChartLine
      data={
        Array [
          Object {
            "name": "red",
            "x": 2019-05-05T00:00:00.000Z,
            "y": 5,
          },
          Object {
            "name": "red",
            "x": 2019-06-06T00:00:00.000Z,
            "y": 7,
          },
          Object {
            "name": "red",
            "x": 2019-07-07T00:00:00.000Z,
            "y": 9,
          },
        ]
      }
      key="red"
      name="red"
      style={
        Object {
          "data": Object {
            "stroke": "#AA4643",
          },
        }
      }
    />
    <ChartLine
      data={
        Array [
          Object {
            "name": "green",
            "x": 2019-05-05T00:00:00.000Z,
            "y": 2,
          },
          Object {
            "name": "green",
            "x": 2019-06-06T00:00:00.000Z,
            "y": 4,
          },
          Object {
            "name": "green",
            "x": 2019-07-07T00:00:00.000Z,
            "y": 6,
          },
        ]
      }
      key="green"
      name="green"
      style={
        Object {
          "data": Object {
            "stroke": "#89A54E",
          },
        }
      }
    />
  </ChartGroup>
</Chart>
`;
